# bazel-gazelle

cmd/gazelle/: fix-update.go  integration_test.go  metaresolver.go  update-repos.go
internal/language/test_filegroup_with_config/: BUILD.bazel  lang.go
language/: lang.go
tests/: BUILD.bazel
tests/diff_mode_with_config/: BUILD.in  README.md  expectedStdout.txt
tests/diff_mode_with_config/subdir/: BUILD.in
testtools/: files.go
