load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "test_filegroup_with_config",
    srcs = ["lang.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/internal/language/test_filegroup_with_config",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//language",
        "//rule",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "lang.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":test_filegroup_with_config",
    visibility = ["//:__subpackages__"],
)
